src/wrapper/include/dawn.h

#ifndef sk_dawn_DEFINED
#define sk_dawn_DEFINED

#include "wrapper/include/sk_types.h"

SK_C_PLUS_PLUS_BEGIN_GUARD

// Opaque handles matching Dawn's WebGPU types
typedef struct sk_wgpu_instance_t sk_wgpu_instance_t;
typedef struct sk_wgpu_adapter_t sk_wgpu_adapter_t;
typedef struct sk_wgpu_device_t sk_wgpu_device_t;
typedef struct sk_wgpu_queue_t sk_wgpu_queue_t;
typedef struct sk_wgpu_shared_texture_memory_t sk_wgpu_shared_texture_memory_t;
typedef struct sk_wgpu_texture_t sk_wgpu_texture_t;

typedef enum {
  SK_WGPU_BACKEND_TYPE_UNDEFINED = 0,
  SK_WGPU_BACKEND_TYPE_NULL = 1,
  SK_WGPU_BACKEND_TYPE_WEBGPU = 2,
  SK_WGPU_BACKEND_TYPE_D3D11 = 3,
  SK_WGPU_BACKEND_TYPE_D3D12 = 4,
  SK_WGPU_BACKEND_TYPE_METAL = 5,
  SK_WGPU_BACKEND_TYPE_VULKAN = 6,
  SK_WGPU_BACKEND_TYPE_OPENGL = 7,
  SK_WGPU_BACKEND_TYPE_OPENGLES = 8,
} sk_wgpu_backend_type_t;

typedef void sk_dawn_proctable_t;

SK_C_API void* sk_wgpu_dawn_proc_table();

SK_C_API bool sk_wgpu_init();

// Instance
SK_C_API sk_wgpu_instance_t* sk_wgpu_create_instance(void);
SK_C_API void sk_wgpu_instance_release(sk_wgpu_instance_t* instance);
SK_C_API void sk_wgpu_instance_process_events(sk_wgpu_instance_t* instance);

typedef struct {
  void* egl_display;
} sk_wgpu_adapter_request_t;

// Adapter - request adapter from instance with specified backend
SK_C_API sk_wgpu_adapter_t* sk_wgpu_instance_request_adapter(sk_wgpu_instance_t* instance, sk_wgpu_backend_type_t backend_type, const sk_wgpu_adapter_request_t* request);
SK_C_API void sk_wgpu_adapter_release(sk_wgpu_adapter_t* adapter);

// Device - request default device from adapter (needs instance for waiting)
SK_C_API sk_wgpu_device_t* sk_wgpu_adapter_request_device(sk_wgpu_instance_t* instance, sk_wgpu_adapter_t* adapter);
SK_C_API void sk_wgpu_device_add_ref(sk_wgpu_device_t* device);
SK_C_API void sk_wgpu_device_release(sk_wgpu_device_t* device);

// Queue - get queue from device
SK_C_API sk_wgpu_queue_t* sk_wgpu_device_get_queue(sk_wgpu_device_t* device);
SK_C_API void sk_wgpu_queue_release(sk_wgpu_queue_t* queue);

// Texture
SK_C_API void sk_wgpu_texture_add_ref(sk_wgpu_texture_t* texture);
SK_C_API void sk_wgpu_texture_release(sk_wgpu_texture_t* texture);

typedef struct {
  uint32_t new_layout;
  uint32_t old_layout;
} sk_wgpu_shared_texture_memory_vulkan_layout;

typedef struct sk_wgpu_fence_export_t sk_wgpu_fence_export_t;

SK_C_API sk_wgpu_fence_export_t* sk_wgpu_fence_export_new_sync_fd();
SK_C_API void sk_wgpu_fence_export_free(sk_wgpu_fence_export_t* fence_export);
SK_C_API size_t sk_wgpu_fence_export_fence_count(sk_wgpu_fence_export_t* fence_export);

SK_C_API int sk_wgpu_fence_export_get_sync_fd(sk_wgpu_fence_export_t* fence_export, size_t index);

// Texture memory
SK_C_API sk_wgpu_texture_t* sk_wgpu_shared_texture_memory_create_texture(sk_wgpu_shared_texture_memory_t* texture_memory);
SK_C_API void sk_wgpu_shared_texture_memory_add_ref(sk_wgpu_shared_texture_memory_t* texture_memory);
SK_C_API void sk_wgpu_shared_texture_memory_release(sk_wgpu_shared_texture_memory_t* texture_memory);
SK_C_API bool sk_wgpu_shared_texture_memory_begin_access(sk_wgpu_shared_texture_memory_t* texture_memory, sk_wgpu_texture_t* texture, const sk_wgpu_shared_texture_memory_vulkan_layout* vk_layout);
SK_C_API bool sk_wgpu_shared_texture_memory_end_access(sk_wgpu_shared_texture_memory_t* texture_memory, sk_wgpu_texture_t* texture, sk_wgpu_shared_texture_memory_vulkan_layout* vk_layout_out, sk_wgpu_fence_export_t* fence_export);

// DirectX

SK_C_API sk_wgpu_shared_texture_memory_t* sk_wgpu_import_shared_texture_memory_from_d3d12_resource(sk_wgpu_device_t* device, void* dx12_resource, const char* label);
SK_C_API sk_wgpu_shared_texture_memory_t* sk_wgpu_import_shared_texture_memory_from_d3d11_texture(sk_wgpu_device_t* device, void* dx11_texture, const char* label);
SK_C_API void* sk_wgpu_device_copy_d3d12_device(sk_wgpu_device_t* device);
SK_C_API void* sk_wgpu_device_copy_d3d11_device(sk_wgpu_device_t* device);
SK_C_API void* sk_wgpu_device_copy_d3d11on12_device(sk_wgpu_device_t* device);
SK_C_API void* sk_wgpu_device_copy_d3d12_command_queue(sk_wgpu_device_t* device);
SK_C_API void sk_wgpu_com_add_ref(void* com_object);
SK_C_API void sk_wgpu_com_release(void* com_object);

// EGL
SK_C_API sk_wgpu_texture_t* sk_wgpu_texture_from_egl_image(sk_wgpu_device_t* device, void* egl_image, uint32_t width, uint32_t height, bool is_initialized, const char* label);
SK_C_API sk_wgpu_shared_texture_memory_t* sk_wgpu_import_shared_texture_memory_from_egl_image(sk_wgpu_device_t* device, void* egl_image, const char* label);

// DRM
SK_C_API sk_wgpu_shared_texture_memory_t* sk_wgpu_shared_texture_memory_from_gbm_bo(sk_wgpu_device_t* device, void* bo, const char* label);

SK_C_PLUS_PLUS_END_GUARD

#endif  // sk_dawn_DEFINED