packages/dawn_dart/lib/src/dawn.g.dart

// ignore_for_file: unused_field
// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
@ffi.DefaultAsset('package:dawn_dart/dawn_dart')
library;

import 'dart:ffi' as ffi;

@ffi.Native<ffi.Pointer<ffi.Void> Function()>()
external ffi.Pointer<ffi.Void> sk_wgpu_dawn_proc_table();

@ffi.Native<ffi.Bool Function()>()
external bool sk_wgpu_init();

@ffi.Native<ffi.Pointer<sk_wgpu_instance_t> Function()>()
external ffi.Pointer<sk_wgpu_instance_t> sk_wgpu_create_instance();

@ffi.Native<ffi.Void Function(ffi.Pointer<sk_wgpu_instance_t>)>()
external void sk_wgpu_instance_release(
  ffi.Pointer<sk_wgpu_instance_t> instance,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<sk_wgpu_instance_t>)>()
external void sk_wgpu_instance_process_events(
  ffi.Pointer<sk_wgpu_instance_t> instance,
);

@ffi.Native<
  ffi.Pointer<sk_wgpu_adapter_t> Function(
    ffi.Pointer<sk_wgpu_instance_t>,
    ffi.UnsignedInt,
  )
>(symbol: 'sk_wgpu_instance_request_adapter')
external ffi.Pointer<sk_wgpu_adapter_t> _sk_wgpu_instance_request_adapter(
  ffi.Pointer<sk_wgpu_instance_t> instance,
  int backend_type,
);

ffi.Pointer<sk_wgpu_adapter_t> sk_wgpu_instance_request_adapter(
  ffi.Pointer<sk_wgpu_instance_t> instance,
  sk_wgpu_backend_type_t backend_type,
) => _sk_wgpu_instance_request_adapter(instance, backend_type.value);

@ffi.Native<ffi.Void Function(ffi.Pointer<sk_wgpu_adapter_t>)>()
external void sk_wgpu_adapter_release(ffi.Pointer<sk_wgpu_adapter_t> adapter);

@ffi.Native<
  ffi.Pointer<sk_wgpu_device_t> Function(
    ffi.Pointer<sk_wgpu_instance_t>,
    ffi.Pointer<sk_wgpu_adapter_t>,
  )
>()
external ffi.Pointer<sk_wgpu_device_t> sk_wgpu_adapter_request_device(
  ffi.Pointer<sk_wgpu_instance_t> instance,
  ffi.Pointer<sk_wgpu_adapter_t> adapter,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<sk_wgpu_device_t>)>()
external void sk_wgpu_device_add_ref(ffi.Pointer<sk_wgpu_device_t> device);

@ffi.Native<ffi.Void Function(ffi.Pointer<sk_wgpu_device_t>)>()
external void sk_wgpu_device_release(ffi.Pointer<sk_wgpu_device_t> device);

@ffi.Native<
  ffi.Pointer<sk_wgpu_queue_t> Function(ffi.Pointer<sk_wgpu_device_t>)
>()
external ffi.Pointer<sk_wgpu_queue_t> sk_wgpu_device_get_queue(
  ffi.Pointer<sk_wgpu_device_t> device,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<sk_wgpu_queue_t>)>()
external void sk_wgpu_queue_release(ffi.Pointer<sk_wgpu_queue_t> queue);

@ffi.Native<ffi.Void Function(ffi.Pointer<sk_wgpu_texture_t>)>()
external void sk_wgpu_texture_add_ref(ffi.Pointer<sk_wgpu_texture_t> texture);

@ffi.Native<ffi.Void Function(ffi.Pointer<sk_wgpu_texture_t>)>()
external void sk_wgpu_texture_release(ffi.Pointer<sk_wgpu_texture_t> texture);

@ffi.Native<
  ffi.Pointer<sk_wgpu_texture_t> Function(
    ffi.Pointer<sk_wgpu_shared_texture_memory_t>,
  )
>()
external ffi.Pointer<sk_wgpu_texture_t>
sk_wgpu_shared_texture_memory_create_texture(
  ffi.Pointer<sk_wgpu_shared_texture_memory_t> texture_memory,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<sk_wgpu_shared_texture_memory_t>)>()
external void sk_wgpu_shared_texture_memory_add_ref(
  ffi.Pointer<sk_wgpu_shared_texture_memory_t> texture_memory,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<sk_wgpu_shared_texture_memory_t>)>()
external void sk_wgpu_shared_texture_memory_release(
  ffi.Pointer<sk_wgpu_shared_texture_memory_t> texture_memory,
);

@ffi.Native<
  ffi.Bool Function(
    ffi.Pointer<sk_wgpu_shared_texture_memory_t>,
    ffi.Pointer<sk_wgpu_texture_t>,
  )
>()
external bool sk_wgpu_shared_texture_memory_begin_access(
  ffi.Pointer<sk_wgpu_shared_texture_memory_t> texture_memory,
  ffi.Pointer<sk_wgpu_texture_t> texture,
);

@ffi.Native<
  ffi.Bool Function(
    ffi.Pointer<sk_wgpu_shared_texture_memory_t>,
    ffi.Pointer<sk_wgpu_texture_t>,
  )
>()
external bool sk_wgpu_shared_texture_memory_end_access(
  ffi.Pointer<sk_wgpu_shared_texture_memory_t> texture_memory,
  ffi.Pointer<sk_wgpu_texture_t> texture,
);

@ffi.Native<
  ffi.Pointer<sk_wgpu_shared_texture_memory_t> Function(
    ffi.Pointer<sk_wgpu_device_t>,
    ffi.Pointer<ffi.Void>,
    ffi.Pointer<ffi.Char>,
  )
>()
external ffi.Pointer<sk_wgpu_shared_texture_memory_t>
sk_wgpu_import_shared_texture_memory_from_d3d12_resource(
  ffi.Pointer<sk_wgpu_device_t> device,
  ffi.Pointer<ffi.Void> dx12_resource,
  ffi.Pointer<ffi.Char> label,
);

@ffi.Native<
  ffi.Pointer<sk_wgpu_shared_texture_memory_t> Function(
    ffi.Pointer<sk_wgpu_device_t>,
    ffi.Pointer<ffi.Void>,
    ffi.Pointer<ffi.Char>,
  )
>()
external ffi.Pointer<sk_wgpu_shared_texture_memory_t>
sk_wgpu_import_shared_texture_memory_from_d3d11_texture(
  ffi.Pointer<sk_wgpu_device_t> device,
  ffi.Pointer<ffi.Void> dx11_texture,
  ffi.Pointer<ffi.Char> label,
);

@ffi.Native<ffi.Pointer<ffi.Void> Function(ffi.Pointer<sk_wgpu_device_t>)>()
external ffi.Pointer<ffi.Void> sk_wgpu_device_copy_d3d12_device(
  ffi.Pointer<sk_wgpu_device_t> device,
);

@ffi.Native<ffi.Pointer<ffi.Void> Function(ffi.Pointer<sk_wgpu_device_t>)>()
external ffi.Pointer<ffi.Void> sk_wgpu_device_copy_d3d11_device(
  ffi.Pointer<sk_wgpu_device_t> device,
);

@ffi.Native<ffi.Pointer<ffi.Void> Function(ffi.Pointer<sk_wgpu_device_t>)>()
external ffi.Pointer<ffi.Void> sk_wgpu_device_copy_d3d11on12_device(
  ffi.Pointer<sk_wgpu_device_t> device,
);

@ffi.Native<ffi.Pointer<ffi.Void> Function(ffi.Pointer<sk_wgpu_device_t>)>()
external ffi.Pointer<ffi.Void> sk_wgpu_device_copy_d3d12_command_queue(
  ffi.Pointer<sk_wgpu_device_t> device,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>()
external void sk_wgpu_com_add_ref(ffi.Pointer<ffi.Void> com_object);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>()
external void sk_wgpu_com_release(ffi.Pointer<ffi.Void> com_object);

final class sk_wgpu_instance_t extends ffi.Opaque {}

final class sk_wgpu_adapter_t extends ffi.Opaque {}

final class sk_wgpu_device_t extends ffi.Opaque {}

final class sk_wgpu_queue_t extends ffi.Opaque {}

final class sk_wgpu_shared_texture_memory_t extends ffi.Opaque {}

final class sk_wgpu_texture_t extends ffi.Opaque {}

enum sk_wgpu_backend_type_t {
  SK_WGPU_BACKEND_TYPE_UNDEFINED(0),
  SK_WGPU_BACKEND_TYPE_NULL(1),
  SK_WGPU_BACKEND_TYPE_WEBGPU(2),
  SK_WGPU_BACKEND_TYPE_D3D11(3),
  SK_WGPU_BACKEND_TYPE_D3D12(4),
  SK_WGPU_BACKEND_TYPE_METAL(5),
  SK_WGPU_BACKEND_TYPE_VULKAN(6),
  SK_WGPU_BACKEND_TYPE_OPENGL(7),
  SK_WGPU_BACKEND_TYPE_OPENGLES(8);

  final int value;
  const sk_wgpu_backend_type_t(this.value);

  static sk_wgpu_backend_type_t fromValue(int value) => switch (value) {
    0 => SK_WGPU_BACKEND_TYPE_UNDEFINED,
    1 => SK_WGPU_BACKEND_TYPE_NULL,
    2 => SK_WGPU_BACKEND_TYPE_WEBGPU,
    3 => SK_WGPU_BACKEND_TYPE_D3D11,
    4 => SK_WGPU_BACKEND_TYPE_D3D12,
    5 => SK_WGPU_BACKEND_TYPE_METAL,
    6 => SK_WGPU_BACKEND_TYPE_VULKAN,
    7 => SK_WGPU_BACKEND_TYPE_OPENGL,
    8 => SK_WGPU_BACKEND_TYPE_OPENGLES,
    _ => throw ArgumentError(
      'Unknown value for sk_wgpu_backend_type_t: $value',
    ),
  };
}

typedef sk_dawn_proctable_t = ffi.Void;
typedef Dartsk_dawn_proctable_t = void;
